# AI-Engineer-Note

./: README.md
Deeplearning-Framework/ONNX/: README.md
Deeplearning-Framework/Pytorch/: README.md
Deeplearning-Framework/Pytorch/docs/: build_from_source.md
Deeplearning-Framework/TensorRT/: README.md
Deeplearning-Framework/TensorRT/docs/: tutorial.md
Deeplearning-Framework/Tensorflow/: README.md
Deeplearning/ComputerVision/docs/: gated_convolution.md  multihead_attn.md  resblock.md
Deploy/: README.md
Deploy/Deepstream/: FAQ.md  README.md
Deploy/Deepstream/sample-ALPR/: README.md  config_deepstream.txt  config_lpd.txt  config_lpr.txt  config_vehicletype.txt  config_yolov4.txt
Deploy/Deepstream/sample-ALPR/nvdsinfer_custom_impl_Yolo/: nvdsparsebbox_Yolo.cpp
Deploy/Deepstream/sample-ALPR/weights/license-plate-recognition/: labels.txt
Deploy/Deepstream/sample-ALPR/weights/vehicletypenet/: labels.txt
Deploy/Deepstream/sample-scrfd/: README.md  config_scrfd.txt  parser_scrfd.py  run_scrfd.py
Deploy/Deepstream/sample-scrfd/nvdsinfer_custom_impl_Yolo/: CMakeLists.txt  Makefile  batchedNMSCustomInference.cu  batchedNMSCustomPlugin.cpp  batchedNMSCustomPlugin.h  gatherNMSCustomOutputs.cu  gatherNMSCustomOutputs.h  nvdsparsebbox_Yolo.cpp
Deploy/Deepstream/sample-scrfd/nvdsinfer_custom_impl_Yolo/common/: kernel.cpp  kernel.h  nmsHelper.cpp  nmsUtils.h
Deploy/Deepstream/sample-yolov4/: config_deepstream.txt  config_tracker.txt  config_yolov4.txt  run_yolov4.py  test_onnx.py
Deploy/Deepstream/sample-yolov4/exec_backends/: trt_backend.py
Deploy/Deepstream/sample-yolov4/nvdsinfer_custom_impl_Yolo/: Makefile  nvdsparsebbox_Yolo.cpp
Deploy/Deepstream/sample-yolov4/tools/: add_nms_plugins.py
Deploy/NVIDIA/: README.md
Deploy/NVIDIA/docs/: multi_instance_gpu.md  nvidia_video_sdk.md
Deploy/Transfer-Learning-Toolkit/: README.md
Deploy/Transfer-Learning-Toolkit/docs/: detectnet_v2.md  yolov4.md
Deploy/Triton-inference-server/: README.md
Deploy/Triton-inference-server/docs/: backend.md  install.md  model_batching.md  model_configuration.md  model_ensemble.md  model_instance.md  model_management.md  optimization_pytorch.md  perf_analyzer.md  triton_kaldi.md  triton_onnx.md  triton_pytorch.md  triton_tensorrt.md
Deploy/Triton-inference-server/src/: sample_grpc.py  sample_load_unload.py
Framework/Pytorch/: README.md
Framework/Pytorch/docs/: build_from_source.md
Linux/: README.md
Linux/docs/: build_opencv.md
